--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -1,31 +1,35 @@
 .movie-poster {
-  max-width: 250px;
-  max-width: 250px;
-  padding: 5px;
+  width: 150px;
+  width: 250px;
+  padding: 3px;
 }
 .movie-container {
   background-color: black;
   display: flex;
   flex-direction: column;
-  padding: 3px;
-  margin: 0px;
+  padding: 2.5rem;
   color: white;
   min-height: 100vh;
   min-width: 100vw;
 }
 .movie-page-poster {
-  max-height: 400px;
-  max-width: 400px;
-  padding: 5px;
+  max-height: 550px;
+  max-width: 500px;
 }
 .movie-page-container {
   background-color: black;
   display: flex;
-  padding: 7rem;
+  padding: 3rem;
   padding-top: 2rem;
   margin: 0px;
   color: white;
   min-height: 100vh;
+}
+.loading{
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 body {
   overflow-x: hidden;
