--- a/src/components/NavbarMain.css
+++ b/src/components/NavbarMain.css
@@ -20,7 +20,7 @@
 .link-to:hover {
   color: grey;
 }
-.red {
+.search_btn {
   background-color: #070707;
   background-image: linear-gradient(0deg, #070707 0%, #00090b 33%, #000000 66%);
   color: white;
